# strung

./: .cursorrules  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  benchmark_report.md  strung
.github/workflows/: ci.yml  release.yml
src/: digrams.rs  main.rs
tests/samples/: test_mixed.txt  test_score.txt  test_strict.txt
